--- a/client/main.html
+++ b/client/main.html
@@ -6,8 +6,8 @@
 
 <body>
   <div class="container">
-    <h1>ezmi</h1>
-    <br/>
+    <!--<h1>ezmi</h1>-->
+    <br/><br/>
     {{> actions}} 
     <br/>
     {{> dragList}}
