--- a/client/main.html
+++ b/client/main.html
@@ -5,11 +5,10 @@
 </head>
 
 <body>
-  <div class="container">
-    <!--<h1>ezmi</h1>-->
-    <br/><br/>
-    {{> actions}} 
-    <br/>
-    {{> dragList}}
+  {{>navigation}} 
+  {{> stripes}}
+  <div class="container body">
+    {{> actions}}
+    <br/> {{> dragList}}
   </div>
 </body>
